--- a/projects/ngx-take-until-destroy/package.json
+++ b/projects/ngx-take-until-destroy/package.json
@@ -1,6 +1,9 @@
 {
-  "name": "ngx-take-until-destroy",
+  "name": "@betalabs/ngx-take-until-destroy",
   "version": "0.0.1",
+  "scripts": {
+    "build": "cd ../../ && ng run ngx-take-until-destroy:build"
+  },
   "peerDependencies": {
     "@angular/common": "^7.1.0",
     "@angular/core": "^7.1.0"
