--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,7 @@
 # See http://help.github.com/ignore-files/ for more about ignoring files.
 
 # compiled output
-/dist
+projects/*/dist
 /tmp
 /out-tsc
 
@@ -35,6 +35,7 @@ speed-measure-plugin.json
 /libpeerconnection.log
 npm-debug.log
 yarn-error.log
+lerna-debug.log
 testem.log
 /typings
 
